[package]
name = "blog"
version = "0.1.0"
authors = ["qinxiaoguang01 <qinxiaoguang01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8" # 打印日志
env_logger = "0.7.1"
chrono = "0.4.9"
chrono-tz = "0.5.1"
futures = "0.3.4"
actix-web = "4"
actix-http = "1.0.1"
actix-multipart = "0.6.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.6"
toml = "0.5.4"
redis = "0.23.1"
lazy_static = "1.4.0"
mongodb = { version = "2.6.0", default-features = false, features = ["sync"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1.3.1"
base64 = "0.11.0"
iota = "0.2.1"
async-std = "1.9.0"
rand = "0.7.3"
log4rs = "0.11.0"
image = "0.24.6"
ring = "0.16.19" # 解决apple m1编异不过的问题